--- a/docker-build/helm/xdoc-job/values.yaml
+++ b/docker-build/helm/xdoc-job/values.yaml
@@ -1,31 +1,85 @@
-# Default values for xdoc-job.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-existConfigMap: false # Neu da co config map thi dat ban true
-replicaCount: 1
+# Thou! please carefuly readding to avoid mistake !!!!!
+# This Helm values declare all you need to deploy LV-File-Servce to Developer enviroment, On Premise infrasrure or AWS
+# Ngươi! xin vui lòng đọc kỹ để tránh sai lầm !!!!!
+# Các giá trị Helm này khai báo tất cả những gì bạn cần để triển khai LV-File-Servce cho môi trường Nhà phát triển, Cơ sở hạ tầng tại chỗ hoặc AWS
+#
+# All pods in this deployment require below info (regardless where they would be installed):
+#  Tất cả các Pod trong quá trình triển khai này đều yêu cầu thông tin bên dưới (bất kể chúng sẽ được cài đặt ở đâu):
+
+# 1 - MongodDb database, embody by tuples of :  host, authSource, username, password. My Lambkin! do not worry about each infor that. The explaination will be show each line in this Helm Values.
+#    (- Cơ sở dữ liệu MongodDb, thể hiện bằng các bộ: máy chủ, authSource, tên người dùng, mật khẩu. My Lambkin! đừng lo lắng về từng thông tin cho điều đó. Giải thích sẽ được hiển thị mỗi dòng trong Giá trị Helm này.)
+# 2- Need one database in MongoDb to manage all Tenants even if File-Service just sevrve for only one Tenant. (Cần một cơ sở dữ liệu trong MongoDb để quản lý tất cả các Đối tượng thuê ngay cả khi Dịch vụ tệp chỉ phục vụ cho một Đối tượng thuê.)
+# 3- At Least one ElasticSearch in which embody in tuples of: server and prefix_index ('prefix_index will be explain when it was declare')
+# 4- One broker message. When Pod wana to inform to other. The Pod could not directly  inform. It just informs to broker message and broker message will inform to another.
+# 5- One temporary storage
+
+existConfigMap: false
+# if thou are deploying all Pods in K8S with an existing congfig map.
+# Thou can turn this value into false
+
+
+
+storageConfig:
+  # This configuration  describes how and where all Pods in all deployments use shared-files when they need to process.
+  type: longhorn
+  # the type of storage
+  longhorn:
+    # If thou would like to use longhorn-strorage turn this value into false.
+      size: 30Gi
+    # storage request size is at least 30 GB (why? some of Pods in deployment need AI-dataset. The volume for AI-dataset, sometime reach 30GB. So, 30GB is OK )
+      name: xdoc-storage
+      className: longhorn-storage-delete
+  nfs:
+    server: 10.0.2.217
+    directory: /var/nfs_share_dir_for_k8s
+# Make sure when thou use this value. Thou could inquire about class-name of storage by thee's DE-OP
 defaults:
   replicas: 2
+# if thou are deploying all Pods in K8S with 3 Worker-Nodes
+# Thou could set this value is 3
+# Expalination:
+# The number of Pods in all deployments by default will be set by this value.
   description: "Uprate version"
   executor: "python3"
+# The most of Pods in all Deployment are using python3
   restartPolicy: Always
-  kind: Deployment
-  apiVersion: apps/v1
+  kind: Deployment # don not care about that
+  apiVersion: apps/v1 # don not care about that
+
+# Below value is really important info. Thou must sure that value of all attributes
 config:
   db:
+ # At the mention at a top of file. All Pods will run if all below config are correct
+ #
     admin_db_name: 'hps-file-test'
+# Tenant-manage-database even if thee's system just serve for only one Tenant
     authSource: 'hps-file-test'
+# When a Pod conects to MongoDb Database they will verify Auth at this database. As usually, authSource used to be 'admin'
     host: '10.0.2.140'
+# Server MongodDb or Mondgos router address
     password: ""
+# Password: if thee's MongoDb did not set Auth-Require, set this value is ''
     port: '27017'
+#Port: remmeber that this value should be in "'"
     username: ""
   elastic_search:
+ # At the mention at a top of file. All Pods will run if all below config are correct
     prefix_index: 'lv-codx'
+# Each Tenant require a ElasticSearch index with prefix is this value
+# Exmaple Tenant name default ElasticSearch Index is 'lv-doc_default'
     server: 'http://10.0.2.140:9200'
+# Full url to ElasticSearch
   rabbitmq:
+# Broker clarification
     port: '5672'
+# Port: Thou! please quote this value
     server: 'rabbitmq.rabbitmq-dev.svc.cluster.local'
+# Server of Broker message
   temp_directory: ./brokers/tmp
 
+#------------------------------------------
+#- Below values use for Developer environment
+#------------------------------------------
 config_dev:
   db:
     admin_db_name: 'lv-docs'
@@ -44,9 +98,8 @@ config_dev:
 
 
 namespace: xdoc-job-v7
-nfs:
-  server: 10.0.2.217
-  directory: /var/nfs_share_dir_for_k8s
+# The namespace of all K8S resource
+
 nfs_dev:
   server: 172.16.7.91
   directory: /var/nfs_share_dir_for_k8s
