--- a/docker-build/helm/xdoc-job/values.yaml
+++ b/docker-build/helm/xdoc-job/values.yaml
@@ -1,5 +1,6 @@
 # Thou! please carefuly readding to avoid mistake !!!!!
 # This Helm values declare all you need to deploy LV-File-Servce to Developer enviroment, On Premise infrasrure or AWS
+
 # Ngươi! xin vui lòng đọc kỹ để tránh sai lầm !!!!!
 # Các giá trị Helm này khai báo tất cả những gì bạn cần để triển khai LV-File-Servce cho môi trường Nhà phát triển, Cơ sở hạ tầng tại chỗ hoặc AWS
 #
@@ -9,8 +10,8 @@
 # 1 - MongodDb database, embody by tuples of :  host, authSource, username, password. My Lambkin! do not worry about each infor that. The explaination will be show each line in this Helm Values.
 #    (- Cơ sở dữ liệu MongodDb, thể hiện bằng các bộ: máy chủ, authSource, tên người dùng, mật khẩu. My Lambkin! đừng lo lắng về từng thông tin cho điều đó. Giải thích sẽ được hiển thị mỗi dòng trong Giá trị Helm này.)
 # 2- Need one database in MongoDb to manage all Tenants even if File-Service just sevrve for only one Tenant. (Cần một cơ sở dữ liệu trong MongoDb để quản lý tất cả các Đối tượng thuê ngay cả khi Dịch vụ tệp chỉ phục vụ cho một Đối tượng thuê.)
-# 3- At Least one ElasticSearch in which embody in tuples of: server and prefix_index ('prefix_index will be explain when it was declare')
-# 4- One broker message. When Pod wana to inform to other. The Pod could not directly  inform. It just informs to broker message and broker message will inform to another.
+# 3- At Least one ElasticSearch in which embody in tuples of: server and prefix_index ('prefix_index will be explained when it was declare')
+# 4- One broker message. When Pod wana to inform to others. The Pod could not directly  inform. It just informs to broker message and broker message will inform to another.
 # 5- One temporary storage
 
 existConfigMap: false
@@ -26,7 +27,7 @@ storageConfig:
   longhorn:
     # If thou would like to use longhorn-strorage turn this value into false.
       size: 30Gi
-    # storage request size is at least 30 GB (why? some of Pods in deployment need AI-dataset. The volume for AI-dataset, sometime reach 30GB. So, 30GB is OK )
+    # storage request size is at least 30 GB (why? Some Pods in deployment need AI-dataset. The volume for AI-dataset, sometime reach 30GB. So, 30GB is OK )
       name: xdoc-storage
       className: longhorn-storage-delete
   nfs:
@@ -41,10 +42,10 @@ defaults:
 # The number of Pods in all deployments by default will be set by this value.
   description: "Uprate version"
   executor: "python3"
-# The most of Pods in all Deployment are using python3
+# The most Pods in all Deployment are using python3
   restartPolicy: Always
-  kind: Deployment # don not care about that
-  apiVersion: apps/v1 # don not care about that
+  kind: Deployment # do not care about that
+  apiVersion: apps/v1 # do not care about that
 
 # Below value is really important info. Thou must sure that value of all attributes
 config:
