--- a/docker-build/helm/xdoc-job/templates/deployment.yaml
+++ b/docker-build/helm/xdoc-job/templates/deployment.yaml
@@ -7,7 +7,10 @@
 {{ $jsonConfig := toPrettyJson  $configs -}}
 {{ $jsonStorageConfig := toPrettyJson  $storageConfig -}}
 
-
+  {{ $webConfig := $.Values.webConfig}}
+  {{ $webDeployType := $webConfig.type}}
+  {{ $web := get  $webConfig $webConfig.type}}
+{{ $webDeployment :=  $webConfig.isAllowDeploy}}
 
 #{{ print "Thou is deploying with config :" }}
 #{{ print "All information is bellow :" }}
@@ -19,6 +22,10 @@
 #  {{print $key}} : {{print $value}}
 # {{end}}
 ---
+# Web deployment
+---
+{{if eq $webDeployment true}}
+---
 kind: Namespace
 apiVersion: v1
 metadata:
@@ -26,8 +33,7 @@ metadata:
   labels:
     name: {{$.Values.namespace}}
 ---
-{{if eq  $.Values.storageConfig.isUse true}}
----
+
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -164,3 +170,79 @@ spec:
   backoffLimit: 4
 ---
 {{- end }}
+
+# if really web need deployment
+{{if eq  $.Values.storageConfig.isUse true}}
+---
+# The first we need deploy an application where Pod of web will run inside
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: {{$web.name}}
+  namespace: {{$web.namespace}}
+spec:
+  selector:
+    matchLabels:
+      app: {{$web.name}}
+  replicas: {{$.Values.defaults.replicas}}
+  template:
+    metadata:
+      labels:
+        app: xdoc-web
+    spec:
+      volumes:
+        - name: {{$storageConfig.name}}
+          {{if hasKey  $storageConfig "className"}}
+          persistentVolumeClaim:
+            claimName: {{$storageConfig.name}}
+          {{else}}
+          nfs:
+            server: {{$storageConfig.server}}
+            path: {{$storageConfig.directory}}
+          {{end}}
+      containers:
+        - args:
+            - python3
+            - /app/cy_xdoc/server.py
+            - bind=0.0.0.0:80
+            - content_segment_len=9
+            - host_url='{{$web.hostUrl}}'
+            - elastic_search.server=$(elastic_search.server)
+            - elastic_search.prefix_index=$(elastic_search.prefix_index)
+            - db.host=$(db.host)
+            - db.port=$(db.port)
+
+            - admin_db_name= $(admin_db_name)
+            - temp_directory=$(temp_directory)
+            - rabbitmq.server=$(rabbitmq.server)
+            - rabbitmq.port=$(rabbitmq.port)
+          image: {{ $.Values.image.repository  }}:{{$.Values.image.tag}}
+          envFrom:
+            - configMapRef:
+                name: xdoc-web-config
+          name: xdoc-web
+          imagePullPolicy: IfNotPresent
+          volumeMounts:
+            - mountPath: /app/share-storage
+              name: {{$storageConfig.name}}
+          ports:
+            - containerPort: 80
+---
+# The second we need deploy a Service where application could be accessed by another
+apiVersion: v1
+kind: Service
+metadata:
+ name: {{$web.name}}
+ namespace: {{$web.namespace}}
+ labels:
+   app: {{$web.name}}
+spec:
+#  type: NodePort
+ selector:
+   app: {{$web.name}}
+ ports:
+ - port: 8082
+   targetPort: 80
+   protocol: TCP
+---
+{{end}}
