--- a/docker-build/helm/xdoc-job/templates/deployment.yaml
+++ b/docker-build/helm/xdoc-job/templates/deployment.yaml
@@ -174,6 +174,27 @@ spec:
 # if really web need deployment
 {{if eq  $.Values.storageConfig.isUse true}}
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: {{$web.name}}
+---
+metadata:
+  name: {{$web.name}}-config
+  namespace: {{$web.namespace}}
+data:
+  admin_db_name: {{ $configs.db.admin_db_name }}
+  db.authSource: '{{ $configs.db.authSource }}'
+  db.host: '{{ $configs.db.host }}'
+  db.password: '{{ $configs.db.password }}'
+  db.port: '{{ $configs.db.port }}'
+  db.username: '{{ $configs.db.username }}'
+  elastic_search.prefix_index: lv-codx
+  elastic_search.server: '{{ $configs.elastic_search.server }}'
+  rabbitmq.port: '{{ $configs.rabbitmq.port }}'
+  rabbitmq.server: '{{ $configs.rabbitmq.server }}'
+  temp_directory: './brokers/tmp'
+---
 # The first we need deploy an application where Pod of web will run inside
 apiVersion: apps/v1
 kind: Deployment
