--- a/docker-build/helm/xdoc-all/templates/deployment.yaml
+++ b/docker-build/helm/xdoc-all/templates/deployment.yaml
@@ -2,3 +2,6 @@
     {{ $dataFile := join "" (list "data/" $info ".yml") }}
     {{ $data := .Files.Get $dataFile | fromYaml -}}
     {{- $dataJson := toPrettyJson $data }}
+#------------------------------------------------------
+# just for debug. no more ...
+#------------------------------------------------------
