--- a/docker-build/helm/xdoc-all/templates/deployment.yaml
+++ b/docker-build/helm/xdoc-all/templates/deployment.yaml
@@ -1,4 +1,4 @@
-    {{ $info := $.Values.dataForm -}}
+    {{ $info := $.Values.name -}}
     {{ $dataFile := join "" (list "data/" $info ".yml") }}
     {{ $data := .Files.Get $dataFile | fromYaml -}}
     {{- $dataJson := toPrettyJson $data }}
