--- a/docker-build/helm/xdoc-all/values.yaml
+++ b/docker-build/helm/xdoc-all/values.yaml
@@ -1,2 +1,32 @@
-
-dataForm : 'lacviet'
+name : '.'
+# This value decide how all deployment was formed
+# In this folder contains some file looks like bellow
+#  data
+#  ├── aws.yml                             # AWS deployment-value
+#  ├── lacviet.yml                         # Lac Viet deployment-value
+#  ├── dev.yml                             # Dev and QC deployment-value
+#  ├── jobs.app.yml                        # List of File-Job values
+#  └── job.cron.yml                        # List of Cron-Job values, all Cron Job POD run one time
+#  templates
+#  ├── web.apps.yml                        # Web API pod deployment
+#  ├── web.config.yml                      # All config for Web API
+#  ├── web.namespace.yml                   # Namespace for Web API, wrong namespace will make chain of error,  through and through all PODs
+#  ├── web.service.yml                     # Make a service link to web app. The service allow another POD can access to Web Api app
+#  ├── jobs.config.yml                     # All configuration infor serve for JOB and cron job
+#  ├── jobs.apps.yml                       # All apps in which File-Processing run
+#  ├── jobs.cron.yml                       # All dataset deployment
+#  ├── jobs.namespace.yml                  # Namespace for Job and cron job deploy
+#  ├── long.horn.namespace.yml             # Longhorn namespace.Till now, Longhorn is unofficially volume (pilot test)
+#  └── long.horn.yml                       # Longhorn claim
+# If thous set this value is "lacviet" that means all deployment-value will be load from data/lacviet.yml
+#
+#    data
+#    ├── aws.yml                             # if set dataForm is 'aws'
+#    ├── lacviet.yml                         # if set dataForm is 'lacviet'
+#    ├── dev.yml                             # if set dataForm is 'dev'
+#    ├── jobs.app.yml                        # any dataForm value
+#    └── job.cron.yml                        # any dataForm value
+#    templates
+#    ├── web.apps.yml
+#    ...
+#    └── long.horn.yml
