--- a/docker-build/helm/xdoc-all/templates/Jobs.config.yml
+++ b/docker-build/helm/xdoc-all/templates/Jobs.config.yml
@@ -1,5 +1,5 @@
 ---
-    {{ $info := $.Values.dataForm -}}
+    {{ $info := $.Values.name -}}
     {{ $dataFile := join "" (list "data/" $info ".yml") -}}
     {{ $data := .Files.Get $dataFile | fromYaml -}}
       {{ $fileJob := $data.fileJob -}}
