--- a/docker-build/helm/xdoc-all/templates/Jobs.namespace.yml
+++ b/docker-build/helm/xdoc-all/templates/Jobs.namespace.yml
@@ -1,6 +1,6 @@
 ---
 
-    {{ $info := $.Values.dataForm -}}
+    {{ $info := $.Values.name -}}
     {{ $dataFile := join "" (list "data/" $info ".yml") -}}
     {{ $data := .Files.Get $dataFile | fromYaml -}}
       {{ $fileJob := $data.fileJob -}}
@@ -17,6 +17,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: xdoc
+  name: {{$fileJob.namespace}}
 ---
 {{end}}
