--- a/docker-build/helm/xdoc-all/templates/jobs.cron.yml
+++ b/docker-build/helm/xdoc-all/templates/jobs.cron.yml
@@ -1,5 +1,5 @@
 ---
-{{ $info := $.Values.dataForm -}}
+{{ $info := $.Values.name -}}
     {{ $dataFile := join "" (list "data/" $info ".yml") -}}
 
     {{ $data := .Files.Get $dataFile | fromYaml -}}
@@ -12,7 +12,8 @@
       {{ $api := $data.webApi -}}
       {{ $storage := $data.storage}}
     {{ $dataJson := toPrettyJson $jobs -}}
-
+---
+{{ if $fileJob }}
 ---
 {{if $jobsData.data}}
 ---
@@ -51,4 +52,5 @@ spec:
 ---
 {{- end }}
 ---
+{{end}}
 {{end}}
