--- a/docker-build/helm/xdoc-all/templates/web.namespace.yml
+++ b/docker-build/helm/xdoc-all/templates/web.namespace.yml
@@ -1,6 +1,6 @@
 ---
 
-    {{ $info := $.Values.dataForm -}}
+    {{ $info := $.Values.name -}}
     {{ $dataFile := join "" (list "data/" $info ".yml") -}}
     {{ $data := .Files.Get $dataFile | fromYaml -}}
       {{ $fileJob := $data.fileJob -}}
