--- a/docker-build/helm/xdoc-all/data/aws.yml
+++ b/docker-build/helm/xdoc-all/data/aws.yml
@@ -40,6 +40,7 @@ webApi:
   hostUrl: http://172.16.7.91/lvfile
   configMapName: xdoc-config
   replicas: 2
+  repository:  nttlong/files-service-final
   tag: "rc.0.5.3.0"
   #The tag name is describe how many stage in image:
   # rc: release candidate
